<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.homeworkgroup20.hw3.StatsActivity">

    <TextView
        android:id="@+id/tvTriviaStats"
        android:layout_width="142dp"
        android:layout_height="47dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/TriviaStats"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCorrectAns"
        android:layout_width="154dp"
        android:layout_height="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/CorrectAns"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTriviaStats" />

    <TextView
        android:id="@+id/tvStatsText"
        android:layout_width="312dp"
        android:layout_height="82dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/StatsText"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPercent" />

    <Button
        android:id="@+id/buttonQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="148dp"
        android:text="@string/btnQuit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsText" />

    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="148dp"
        android:text="@string/buttonTryAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatsText" />

    <TextView
        android:id="@+id/tvPercent"
        android:layout_width="67dp"
        android:layout_height="36dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/Percent"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAns" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="233dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/tvPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorrectAns" />

</android.support.constraint.ConstraintLayout>
