<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mad.homeworkgroup20.hw3.MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/titleText"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <ImageView
        android:id="@+id/imgTrivia"
        android:layout_width="323dp"
        android:layout_height="209dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/trivia" />

    <TextView
        android:id="@+id/txtReady"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="8dp"
        android:text="@string/readytext"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTrivia"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/btnExit"
        style="@android:style/Widget.Button.Small"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnexit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReady"
        app:layout_constraintVertical_bias="0.854" />

    <Button
        android:id="@+id/btnStart"
        style="@android:style/Widget.Button.Small"
        android:layout_width="106dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnstart"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toEndOf="@+id/btnExit"
        app:layout_constraintTop_toBottomOf="@+id/txtReady"
        app:layout_constraintVertical_bias="0.841" />

</android.support.constraint.ConstraintLayout>
